--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cordova-plugin-ionic-webview": "^2.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "2.2.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.5.7",
     "ionic-angular": "3.9.2",
@@ -59,7 +60,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-telerik-imagepicker": {}
     },
     "platforms": [
       "android"
