--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.17.0",
     "@ionic-native/core": "~4.15.0",
-    "@ionic-native/image-picker": "^4.17.0",
     "@ionic-native/splash-screen": "^4.15.0",
     "@ionic-native/status-bar": "^4.15.0",
     "@ionic/cli-plugin-cordova": "^1.6.2",
@@ -30,6 +30,7 @@
     "angularfire2": "^5.1.0",
     "com.synconset.imagepicker": "^2.1.10",
     "cordova-android": "7.1.1",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.1",
@@ -61,7 +62,8 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-telerik-imagepicker": {}
+      "cordova-plugin-telerik-imagepicker": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
