--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@ionic-native/status-bar": "^4.15.0",
     "@ionic/cli-plugin-cordova": "^1.6.2",
     "@ionic/cli-plugin-ionic-angular": "^1.4.1",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
     "angularfire2": "^5.1.0",
     "com.synconset.imagepicker": "^2.1.10",
     "cordova-android": "7.1.1",
