--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/camera": "^4.17.0",
     "@ionic-native/core": "~4.15.0",
+    "@ionic-native/document-viewer": "^4.18.0",
+    "@ionic-native/file": "^4.18.0",
+    "@ionic-native/file-opener": "^4.18.0",
+    "@ionic-native/file-transfer": "^4.18.0",
     "@ionic-native/splash-screen": "^4.15.0",
     "@ionic-native/status-bar": "^4.15.0",
     "@ionic/cli-plugin-cordova": "^1.6.2",
@@ -30,8 +34,12 @@
     "angularfire2": "^5.1.0",
     "com.synconset.imagepicker": "^2.1.10",
     "cordova-android": "7.1.1",
+    "cordova-android-support-gradle-release": "^2.0.1",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-opener2": "2.0.19",
+    "cordova-plugin-file-transfer": "1.7.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -63,7 +71,13 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-telerik-imagepicker": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-file-opener2": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.+"
+      }
     },
     "platforms": [
       "android"
