--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "ionic-app-scripts serve",
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint"
+    "lint": "ionic-app-scripts lint",
+    "ionic:watch:before": "node ./src/bin/script.js",
+    "ionic:build:before": "node ./src/bin/script.js"
   },
   "dependencies": {
     "@angular/animations": "5.2.11",
